[gd_scene load_steps=12 format=3 uid="uid://b8tyay3qihgmw"]

[ext_resource type="Script" path="res://scripts/loading_screen.gd" id="1_5o1t2"]
[ext_resource type="Texture2D" uid="uid://c13428q7ux1fl" path="res://res/complete.png" id="1_e28eq"]
[ext_resource type="FontFile" uid="uid://pdioo34qexc8" path="res://fonts/Retro Gaming.ttf" id="2_8lqc7"]
[ext_resource type="Shader" path="res://shaders/vhs_shader.gdshader" id="4_5l1yq"]
[ext_resource type="AudioStream" uid="uid://frwf5gp5ilh6" path="res://sfx/main_menu.mp3" id="4_10rjf"]
[ext_resource type="AudioStream" uid="uid://x6qq4qoafv5p" path="res://sfx/click.mp3" id="6_16usc"]

[sub_resource type="Animation" id="Animation_kob6s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l0sc6"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_cslqg"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qrl00"]
_data = {
"RESET": SubResource("Animation_kob6s"),
"fade_in": SubResource("Animation_l0sc6"),
"fade_out": SubResource("Animation_cslqg")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4uf0o"]
resource_local_to_scene = true
shader = ExtResource("4_5l1yq")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.579
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="LoadingScreen" type="Node2D"]
script = ExtResource("1_5o1t2")

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_e28eq")

[node name="play_button" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0557292
anchor_top = -0.007
anchor_right = 0.0557292
anchor_bottom = -0.007
offset_left = 780.0
offset_top = 639.0
offset_right = 902.0
offset_bottom = 700.0
theme_override_colors/font_hover_color = Color(0.0313726, 1, 0.470588, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0313726, 1, 0.470588, 1)
theme_override_fonts/font = ExtResource("2_8lqc7")
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "Play"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qrl00")
}

[node name="OverlayLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Overlay" type="ColorRect" parent="OverlayLayer"]
material = SubResource("ShaderMaterial_4uf0o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 12.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_10rjf")

[node name="HoverButtonSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_16usc")

[connection signal="mouse_entered" from="Background/play_button" to="." method="_play_button_mouse_entered"]
[connection signal="pressed" from="Background/play_button" to="." method="_on_play_button_pressed"]
